C2SPorter: reply to unhandled IQ get/sets.

XMPP Core requires that we reply to all IQs we receive. If no handler
claims responsibility for an incoming IQ, the porter should send back a
<service-unavailable/> error. (Currently, Gabble does this.)

https://bugs.freedesktop.org/show_bug.cgi?id=34975